Dark mode fixes

--- a/BeoLingus De-En.css
+++ b/BeoLingus De-En.css
@@ -2,22 +2,19 @@
 @namespace d url(http://www.apple.com/DTDs/DictionaryService-1.0.rng);
 
 @media (prefers-dark-interface) {
-	html {
-		-apple-color-filter: apple-invert-lightness();
-	}
-	html.apple_client-panel {
-		-apple-color-filter: none;
+	body {
+		color: white;
 	}
 }
 
-body { 
+body {
 	font: -apple-system-body;
 	font-family: -apple-system;
 	margin-left: 0.9em;
 	margin-right: 0em;
 	margin-top: 1.0em;
 	margin-bottom: 1.5em;
-	
+
 	color:  text;
 }
 
@@ -102,8 +99,8 @@ span.column {
 	padding: 0.5em;
 }
 
-a.newVersion { 
-	color: #900 !important; 
+a.newVersion {
+	color: #900 !important;
 	font-weight:bold;
 	color: -apple-system-secondary-label !important;
 }
@@ -125,10 +122,10 @@ a.newVersion {
 	text-decoration:underline;
 }
 
-/* 
+/*
  === Fußzeile ==============================
  */
- 
+
 .c {
     margin: 1em 0;
     line-height: 2em;
@@ -153,13 +150,13 @@ body>.d:nth-last-child(2) div.c {
 .c span a {
     color:#bbb !important;
 	color:-apple-system-tertiary-label !important;
-	text-decoration: underline;	
+	text-decoration: underline;
 }
 
 /* Popover-Fenster */
 
 html.apple_client-panel body
-{ 
+{
 	margin-top: 0em;
 }
 
